<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.JogoFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivCapaJogo"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="fitXY"
                android:src="@drawable/landscape_game"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ic_outline_create_24"
                app:layout_constraintBottom_toTopOf="@+id/tvDescricaoJogo"
                app:layout_constraintEnd_toEndOf="@+id/ivCapaJogo"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tvNomeJogoCapa"
                style="@style/shadoweffect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/bloodborne"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@+id/ivCapaJogo"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvNomeJogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/bloodborne"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivCapaJogo" />

            <TextView
                android:id="@+id/tvLancamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/lancamento"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNomeJogo" />

            <TextView
                android:id="@+id/tvAnoLancamento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/_2015"
                app:layout_constraintStart_toEndOf="@+id/tvLancamento"
                app:layout_constraintTop_toBottomOf="@+id/tvNomeJogo" />

            <TextView
                android:id="@+id/tvDescricaoJogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:padding="10dp"
                android:text="@string/descricao_bloodborne"
                app:layout_constraintTop_toBottomOf="@+id/tvLancamento" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>